ffplay: only do early frame drop if video queue is not empty

Fixes ticket #2446.

Signed-off-by: Marton Balint <cus@passwd.hu>